<resources>
    <string name="app_name">FeedMe App</string>
    <string name="login">Ingresar</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="register_here">Registrarse Aquí</string>
    <string name="login_message">O use una de las siguientes opciones</string>
    <string name="facebook">FaceBook</string>
    <string name="gmail">Gmail</string>
    <string name="logo">Logo</string>
    <string name="create_account">Crear una cuenta</string>
    <string name="create_account_name">Nombres</string>
    <string name="create_account_surname">Apellidos</string>
    <string name="create_account_sex">Sexo</string>
    <string-array name="sex_array">
        <item>Femenino</item>
        <item>Masculino</item>
        <item>Otro</item>
    </string-array>
    <string name="create_account_address">Dirección</string>
    <string name="create_account_email">Correo</string>
    <string name="create_account_photo">Foto</string>
    <string name="create_account_take_photo">Tomar foto</string>
    <string name="create_account_city">Ciudad</string>
    <string name="create_account_mobile">Celular</string>
    <string name="create_account_user">Usuario</string>
    <string name="create_account_password">Contraseña</string>
    <string name="create_account_button">Crear mi cuenta</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_list">Alimentos</string>
    <string name="menu_add">Añadir</string>
    <string name="menu_logout">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_type_tag">Tipo</string>
    <string name="food_expiration_tag">Vence</string>
    <string name="food_price_tag">Precio</string>
    <string name="food_button_details">Ver detalles</string>
    <string name="food_publish">Publicar</string>
</resources>
