<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/transparent"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.AddFoodFragment">

    <EditText
        android:id="@+id/editNewFoodTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:hint="Nombre de Alimento"
        android:hintTextColor="@color/black"
        android:ems="18"
        android:inputType="text"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewNewFoodImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/create_account_photo"
            android:scaleType="fitCenter"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/ic_user_photo" />

        <Button
            android:id="@+id/btnNewFoodImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/transparent"
            android:text="@string/create_account_take_photo"
            android:textColor="@color/black" />
    </LinearLayout>

    <EditText
        android:id="@+id/editNewFoodExpiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:background="@drawable/rounded_edittext"
        android:ems="18"
        android:hint="Fecha de Vencimiento"
        android:hintTextColor="@color/black"
        android:inputType="date"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editNewFoodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="18"
        android:background="@drawable/rounded_edittext"
        android:hint="Tipo de alimento"
        android:hintTextColor="@color/black"
        android:layout_marginTop="230dp"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editNewFoodComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="18"
        android:lines="4"
        android:gravity="top|start"
        android:background="@drawable/rounded_edittext"
        android:hint="Comentario"
        android:hintTextColor="@color/black"
        android:layout_marginTop="290dp"
        android:inputType="textMultiLine"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/food_publish"
        android:textColor="@color/black"
        android:layout_marginTop="80dp"/>

</FrameLayout>